tests/error/enum_errors/call_variant_from_variant1.py
from guppylang import guppy


@guppy.enum
class MyEnum:
    Left = {}
    Right = {}

@guppy
def fun() -> None:
    l = MyEnum.Left()
    l.Right()


fun.check()
