tests/error/enum_errors/call_variant_from_variant1.err
Error: Attribute not found (at $FILE:12:6)
   | 
10 | def fun() -> None:
11 |     l = MyEnum.Left()
12 |     l.Right()
   |       ^^^^^ `MyEnum` has no method `Right`

Guppy compilation failed due to 1 previous error
